# urdf-anything

./: .gitignore  README.md  get-data.sh  inference_batch.py  main.py  normalize.py  pixi.toml  pyproject.toml  requirements.txt
scripts/: __init__.py  build_cache.py  inference.py  inference.sh  run_multi_node_training.sh  train.py
urdf_anything/: __init__.py
urdf_anything/data/: __init__.py  build_cache.py  cache.py  dataset.py  train_test_split.json  urdf_utils.py
urdf_anything/inference/: __init__.py  runner.py  triposg_helper.py  urdf_io.py  utils.py
urdf_anything/model/: URDFModel_config.yaml  __init__.py  dit_runner.py  dit_triposg.py  multi_output_dit.py  urdf_model.py  utils.py
urdf_anything/training/: __init__.py  distributed.py  trainer.py
