[project]
name = "urdf-anything"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch" },
]
torchvision = [
    { index = "pytorch" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
